# abvelocity

./: CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
abvelocity/src/abvelocity/get_data/: get_asgmnt_data.py  get_multi_expt_data.py  join_expt_dfs.py
abvelocity/src/abvelocity/mea/: get_mea_data.py  mea.py  run_mea.py
abvelocity/src/abvelocity/param/: derived_expt_stats.py  get_metric_conf.py
abvelocity/src/abvelocity/stats/: calc_variant_list_metric_stats.py  two_sample_z_test.py
abvelocity/src/abvelocity/utils/: color_utils.py  write_queries.py
abvelocity/test/get_data/: test_data_container.py  test_get_expt_stats.py  test_get_metric_query.py  test_join_expt_dfs.py  test_query_info.py  test_subsample_where_clause.py
abvelocity/test/journey/event/: test_gen_event_query.py  test_gen_event_tables_query.py
abvelocity/test/journey/seq/: test_add_seq_elements_as_cols.py  test_conversion_query.py  test_count_seq_query.py  test_diff_query.py  test_gen_deduped_seq_query.py  test_gen_event_count_map_query.py  test_gen_fully_deduped_seq_query.py  test_gen_undeduped_seq_query.py  test_seq_query.py
abvelocity/test/journey/viz/: test_create_sankey.py  test_create_sunburst.py
abvelocity/test/mea/: test_mea.py
abvelocity/test/param/: test_analysis_info.py  test_expt_info.py  test_get_hocon_conf.py  test_get_metric_conf.py  test_join_query.py  test_launch.py  test_launch_to_comparison_pair.py  test_launch_to_variant_list.py  test_metric.py  test_variant.py
abvelocity/test/sim/: test_sim.py
abvelocity/test/stats/: test_calc_variant_list_metric_stats.py  test_calc_variant_metric_effects.py  test_calc_variant_metric_stats.py  test_stats.py  test_two_sample_z_test.py
abvelocity/test/testing/: test_assert_query_is_equal.py
abvelocity/test/utils/: test_calc_freq.py  test_check_df_validity.py  test_color_utils.py  test_df_to_html.py  test_df_to_markdown.py  test_gen_combined_figs_html.py  test_gen_pcnt_barplot.py  test_gen_tuples_with_replacement.py  test_get_categ_column_distbn.py  test_merge_dfs_number_cols.py  test_merge_queries_number_cols.py  test_plot_2d_variants.py  test_plot_3d_variants.py  test_plot_lines_markers.py  test_prep_df_for_grouped_plot.py  test_print_to_html.py  test_round_df.py  test_sql_conversion.py  test_transform_time_query.py  test_write_queries.py
docs/docs/content/: 2-what-is-mea.md  4-run-mea-generic.md  5-mea-report.md  6-mea-interpret-steps.md  abvelocity_run_markdown.py  convert_htmls_to_pdf.sh  sim_results_table.tex
docs/docs/content_journey/: 2-what-is-ja.md  3-features-components.md
docs/static/test-results/html_example/: test_df_to_html.html  test_df_to_html_p_value.html
docs/static/test-results/markdown_example/: test_df_to_markdown.md
src/abvelocity/core/get_data/: agg_metrics_query.py  cursor.py  data_container.py  db_interact.py  duckdb_cursor.py  get_asgmnt_data.py  get_expt_stats.py  get_multi_expt_data.py  get_u_metrics_query_from_info.py  impacted_units_query.py  inspect_tables.py  join_expt_dfs.py  join_expt_with_metric_df.py  join_expt_with_metric_queries.py  presto_cursor.py  spark_cursor.py  sql_inline_writer.py  sqlite_cursor.py  subsample_condition.py  swi_agg_metrics_queries.py  u_metrics_query.py
src/abvelocity/core/mea/: assumption_check.py  constants.py  entities.py  get_mea_data.py  mea.py  metric_interaction.py  run_mea.py
src/abvelocity/core/param/: analysis_info.py  constants.py  derived_expt_stats.py  expt_info.py  io_param.py  join_query.py  launch.py  launch_to_comparison_pair.py  launch_to_variant_list.py  metric.py  metric_family.py  metric_info.py  variant.py
src/abvelocity/core/sim/: add_random_dates_to_df.py  ctr_example.py  examples.py  sim.py
src/abvelocity/core/stats/: calc_comparison_pairs_effects.py  calc_variant_list_metric_stats.py  calc_variant_metric_effects_simple.py  calc_variant_metric_stats.py  chi2.py  constants.py  continuous_independence_test.py  count_independence_test.py  cpde_constructor.py  diff_estimator_constructor.py  estimator.py  interaction_statistics.py  jackknife.py  metric_estimator.py  normal_ci.py  param.py  ratio.py  stat_test_compare_distbns.py  stats.py  student_ci.py  two_sample_t_test.py  two_sample_z_test.py  weighted_estimator.py  weighted_metric_estimator.py
src/abvelocity/core/testing/: assert_query_is_equal.py  desc_table.py
src/abvelocity/core/utils/: color_utils.py  create_filtered_regex.py  create_name_from_regex.py  df_to_html.py  dim_collapser.py  gen_combined_figs_html.py  gen_pcnt_barplot.py  gen_tuples_with_replacement.py  get_categ_column_distbn.py  hist_with_quantiles.py  html_to_pdf.py  merge_dfs_number_cols.py  merge_queries_number_cols.py  plot_2d_heatmap.py  plot_2d_variants.py  plot_3d_variants.py  plot_compare_variants.py  plot_conditional_variant_dist.py  plot_lines_markers.py  plot_variants.py  prep_df_for_grouped_plot.py  print_to_html.py  publish_df_color_code_p_value.py  round_df.py  serialization.py  sql_conversion.py  transform_time_query.py  write_queries.py
src/abvelocity/ts/: ARCHITECTURE.md  constants.py  detect_runner.py  forecast_runner.py  gk_test_gate.py  runner.py  testing_utils.py  testing_utils_anomalies.py  viz.py
src/abvelocity/ts/algo/: base.py  greykite_detect_algo.py  greykite_forecast_algo.py  simple_forecast_algo.py
src/abvelocity/ts/backfill/: config.py  result.py  runner.py
src/abvelocity/ts/common/: aggregation_function_enum.py  compare_two_dfs_on_index.py  constants.py  data_loader.py  enums.py  evaluation.py  gen_moving_timeseries_forecast.py  logging.py  python_utils.py  sphinx_plotly.py  testing_utils.py  testing_utils_anomalies.py  time_properties.py  time_properties_forecast.py
src/abvelocity/ts/config/: detect_config.py  forecast_config.py  ts_model_config.py
src/abvelocity/ts/eval/: __init__.py  actuals.py  ad_eval.py  forecast_eval.py  forecast_eval_report.py  live_eval.py
test/abvelocity/ts/: test_detect_runner.py  test_forecast_runner.py  test_greykite_forecast_examples.py  test_plot_forecast_groups_examples.py  test_runner.py  test_simple_forecast_examples.py  test_viz.py
(+544 files in other folders)
